--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,16 +1,71 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.RollingMoment" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
-        <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
-        <item name="colorOnPrimary">@color/white</item>
-        <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
-        <item name="colorOnSecondary">@color/black</item>
-        <!-- Status bar color. -->
-        <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
-        <!-- Customize your theme here. -->
+    <style name="Theme.RollingMoment" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+        <item name="colorPrimary">@color/CFFFFFF</item>
+        <item name="colorPrimaryDark">@color/CFFFFFF</item>
+
+        <item name="android:windowBackground">@android:color/white</item>
+        <item name="android:actionBarItemBackground">@android:color/transparent</item>
+        <item name="buttonStyle">?android:attr/borderlessButtonStyle</item>
+        <item name="checkboxStyle">?android:attr/borderlessButtonStyle</item>
+    </style>
+
+    <!-- Font Family -->
+    <style name="BoldTextView" parent="Widget.AppCompat.TextView">
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="MediumTextView" parent="Widget.AppCompat.TextView">
+    </style>
+
+    <style name="RegularTextView" parent="Widget.AppCompat.TextView">
+    </style>
+
+    <style name="T124Bold" parent="BoldTextView">
+        <item name="android:textSize">24dp</item>
+    </style>
+
+    <style name="T222Bold" parent="BoldTextView">
+        <item name="android:textSize">22dp</item>
+    </style>
+
+    <style name="T320Bold" parent="BoldTextView">
+        <item name="android:textSize">20dp</item>
+    </style>
+
+    <style name="B116Medium" parent="MediumTextView">
+        <item name="android:textSize">16dp</item>
+    </style>
+
+    <style name="B216Medium" parent="MediumTextView">
+        <item name="android:textSize">15dp</item>
+    </style>
+
+    <style name="B316Medium" parent="MediumTextView">
+        <item name="android:textSize">14dp</item>
+    </style>
+
+    <style name="L116Bold" parent="BoldTextView">
+        <item name="android:textSize">16dp</item>
+    </style>
+
+    <style name="L216Medium" parent="MediumTextView">
+        <item name="android:textSize">16dp</item>
+    </style>
+
+    <style name="L314Bold" parent="BoldTextView">
+        <item name="android:textSize">14dp</item>
+    </style>
+
+    <style name="L414Medium" parent="MediumTextView">
+        <item name="android:textSize">14dp</item>
+    </style>
+
+    <style name="L512Bold" parent="BoldTextView">
+        <item name="android:textSize">12dp</item>
+    </style>
+
+    <style name="L612Medium" parent="MediumTextView">
+        <item name="android:textSize">12dp</item>
     </style>
 </resources>
