--- a/app/src/main/res/values/attributes.xml
+++ b/app/src/main/res/values/attributes.xml
@@ -11,5 +11,13 @@
         <attr name="errorMessage" format="string" />
         <attr name="guideText" format="string"/>
         <attr name="isVisibleMaxLength" format="boolean"/>
+
+        <attr name="inputTypes" format="enum">
+            <enum name="text" value="0" />
+            <enum name="textMultiLine" value="1" />
+            <enum name="numberSigned" value="2" />
+            <enum name="password" value="3" />
+            <enum name="numberEnglishOnly" value="4" />
+        </attr>
     </declare-styleable>
 </resources>
