--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="popup_width">315dp</dimen>
+
+    <dimen name="spacing_8">8dp</dimen>
+    <dimen name="spacing_6">6dp</dimen>
+    <dimen name="spacing_4">4dp</dimen>
+    <dimen name="spacing_16">16dp</dimen>
 </resources>
