--- a/app/src/main/res/drawable/ic_accept.xml
+++ b/app/src/main/res/drawable/ic_accept.xml
@@ -1,10 +1,10 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="20dp"
-    android:height="20dp"
+    android:height="21dp"
     android:viewportWidth="20"
-    android:viewportHeight="20">
+    android:viewportHeight="21">
   <path
-      android:pathData="M6.326,16.674C6.502,16.85 6.732,16.938 6.963,16.938C7.193,16.938 7.424,16.85 7.599,16.674L18.737,5.536C19.089,5.185 19.089,4.615 18.737,4.264C18.386,3.912 17.815,3.912 17.464,4.264L6.963,14.765L2.537,10.339C2.185,9.987 1.615,9.987 1.264,10.339C0.912,10.69 0.912,11.26 1.264,11.612L6.326,16.674Z"
-      android:fillColor="#191919"
+      android:pathData="M6.326,17.174C6.502,17.35 6.732,17.438 6.963,17.438C7.193,17.438 7.424,17.35 7.599,17.174L18.737,6.036C19.089,5.685 19.089,5.115 18.737,4.764C18.386,4.412 17.815,4.412 17.464,4.764L6.963,15.265L2.537,10.839C2.185,10.487 1.615,10.487 1.264,10.839C0.912,11.19 0.912,11.76 1.264,12.112L6.326,17.174Z"
+      android:fillColor="#874FFF"
       android:fillType="evenOdd"/>
 </vector>
