--- a/app/src/main/res/layout/fragment_moment_create.xml
+++ b/app/src/main/res/layout/fragment_moment_create.xml
@@ -9,7 +9,7 @@
         android:id="@+id/layoutToolBar"
         layout="@layout/layout_toolbar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="56dp"
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.core.widget.NestedScrollView
