--- a/app/src/main/res/layout/fragment_sign_in.xml
+++ b/app/src/main/res/layout/fragment_sign_in.xml
@@ -8,7 +8,7 @@
         android:id="@+id/layoutToolBar"
         layout="@layout/layout_toolbar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="56dp"
         app:layout_constraintTop_toTopOf="parent" />
 
     <kr.co.rolling.moment.ui.component.CommonEditText
