--- a/app/src/main/res/navigation/moment_graph.xml
+++ b/app/src/main/res/navigation/moment_graph.xml
@@ -17,6 +17,9 @@
         <action
             android:id="@+id/action_SignFragment_to_MomentCreateFragment"
             app:destination="@id/MomentCreateFragment" />
+        <action
+            android:id="@+id/action_SignFragment_to_TraceCreateFragment"
+            app:destination="@id/TraceCreateFragment" />
     </fragment>
 
     <fragment
@@ -45,7 +48,7 @@
     <fragment
         android:id="@+id/MomentCreateFragment"
         android:name="kr.co.rolling.moment.feature.moment.MomentCreateFragment"
-        tools:layout="@layout/fragment_moment_create" >
+        tools:layout="@layout/fragment_moment_create">
         <action
             android:id="@+id/action_MomentCreateFragment_to_MomentCoverBottomSheet"
             app:destination="@id/MomentCoverBottomSheet" />
@@ -62,10 +65,29 @@
     <dialog
         android:id="@+id/MomentCategoryBottomSheet"
         android:name="kr.co.rolling.moment.feature.moment.MomentCategoryBottomSheetFragment"
-        tools:layout="@layout/bottom_sheet_moment_cover" >
+        tools:layout="@layout/bottom_sheet_moment_cover">
         <argument
             android:name="selectedItem"
             android:defaultValue=""
-            app:argType="string"/>
+            app:argType="string" />
+    </dialog>
+
+    <fragment
+        android:id="@+id/TraceCreateFragment"
+        android:name="kr.co.rolling.moment.feature.trace.CreateTraceFragment"
+        tools:layout="@layout/fragment_trace_create">
+        <action
+            android:id="@+id/action_TraceCreateFragment_to_FontSelectBottomSheetFragment"
+            app:destination="@id/FontSelectBottomSheetFragment" />
+    </fragment>
+
+    <dialog
+        android:id="@+id/FontSelectBottomSheetFragment"
+        android:name="kr.co.rolling.moment.feature.trace.FontBottomSheetFragment"
+        tools:layout="@layout/bottom_sheet_select_font">
+        <argument
+            android:name="fontType"
+            app:argType="kr.co.rolling.moment.library.data.TraceFontType"
+            app:nullable="true" />
     </dialog>
 </navigation>
