--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,6 +18,7 @@
     <color name="C005EEB">#005EEB</color>
     <color name="C0054D1">#0054D1</color>
     <color name="C874FFF">#874FFF</color>
+    <color name="CEAE4F8">#EAE4F8</color>
 
     <!-- Gray Color -->
     <color name="C171719">#171719</color>
