--- a/app/src/main/res/drawable/shape_8_fafafa.xml
+++ b/app/src/main/res/drawable/shape_8_fafafa.xml
@@ -4,4 +4,5 @@
     <stroke
         android:width="1dp"
         android:color="@android:color/transparent" />
+    <solid android:color="@color/CFAFAFA"/>
 </shape>
