--- a/app/src/main/res/layout/bottom_sheet_moment_category.xml
+++ b/app/src/main/res/layout/bottom_sheet_moment_category.xml
@@ -9,7 +9,7 @@
     android:paddingHorizontal="20dp">
 
     <TextView
-        android:id="@+id/tvTitle"
+        android:id="@+id/tvMomentTitle"
         style="@style/L718Bold"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -34,7 +34,7 @@
         android:id="@+id/rvAdapter"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/tvTitle"
+        app:layout_constraintTop_toBottomOf="@id/tvMomentTitle"
         tools:listitem="@layout/item_moment_category" />
 
 
