--- a/app/src/main/res/layout/bottom_sheet_moment_cover.xml
+++ b/app/src/main/res/layout/bottom_sheet_moment_cover.xml
@@ -7,7 +7,7 @@
     android:paddingHorizontal="20dp">
 
     <TextView
-        android:id="@+id/tvTitle"
+        android:id="@+id/tvMomentTitle"
         style="@style/L718Bold"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -32,7 +32,7 @@
         android:layout_width="match_parent"
         android:layout_height="540dp"
         android:fillViewport="true"
-        app:layout_constraintTop_toBottomOf="@id/tvTitle">
+        app:layout_constraintTop_toBottomOf="@id/tvMomentTitle">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
