--- a/app/src/main/res/layout/bottom_sheet_select_font.xml
+++ b/app/src/main/res/layout/bottom_sheet_select_font.xml
@@ -8,7 +8,7 @@
     android:paddingHorizontal="20dp">
 
     <TextView
-        android:id="@+id/tvTitle"
+        android:id="@+id/tvMomentTitle"
         style="@style/L718Bold"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -35,7 +35,7 @@
         android:layout_marginTop="20dp"
         android:orientation="vertical"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        app:layout_constraintTop_toBottomOf="@id/tvTitle"
+        app:layout_constraintTop_toBottomOf="@id/tvMomentTitle"
         tools:listitem="@layout/item_font" />
 
 
