--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -19,6 +19,7 @@
     <color name="C0054D1">#0054D1</color>
     <color name="C874FFF">#874FFF</color>
     <color name="CEAE4F8">#EAE4F8</color>
+    <color name="CE7F5E7">#E7F5E7</color>
 
     <!-- Gray Color -->
     <color name="C171719">#171719</color>
