--- a/app/src/main/res/layout/fragment_moment_detail.xml
+++ b/app/src/main/res/layout/fragment_moment_detail.xml
@@ -13,10 +13,10 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.core.widget.NestedScrollView
+        android:id="@+id/layoutScroll"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:fillViewport="true"
-        android:id="@+id/layoutScroll"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@id/layoutToolBar">
 
@@ -55,6 +55,7 @@
                 android:paddingHorizontal="7dp"
                 android:paddingVertical="5dp"
                 android:textColor="@color/C4C4C4C"
+                android:visibility="gone"
                 app:layout_constraintStart_toEndOf="@id/tvDeadline"
                 app:layout_constraintTop_toTopOf="@id/tvDeadline"
                 tools:text="생일" />
