--- a/app/src/main/res/layout/item_moment_cover_type.xml
+++ b/app/src/main/res/layout/item_moment_cover_type.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="wrap_content"
-    android:layout_height="130dp"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools">
 
 
@@ -22,6 +22,6 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@id/tvType"
-        tools:listitem="@layout/item_moment_cover_type" />
+        tools:listitem="@layout/item_moment_cover" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
