--- a/app/src/main/res/layout/item_moment_expired.xml
+++ b/app/src/main/res/layout/item_moment_expired.xml
@@ -25,11 +25,11 @@
         <TextView
             android:id="@+id/tvEndDate"
             style="@style/L910Bold"
-            android:includeFontPadding="false"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="12dp"
             android:background="@drawable/shape_4_e7f5e7"
+            android:includeFontPadding="false"
             android:paddingHorizontal="7dp"
             android:paddingVertical="5dp"
             android:textColor="@color/C00BF40"
@@ -44,6 +44,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="4dp"
             android:background="@drawable/shape_4_e0e0e2_ffffff"
+            android:includeFontPadding="false"
             android:paddingHorizontal="7dp"
             android:paddingVertical="5dp"
             android:textColor="@color/C4C4C4C"
@@ -64,11 +65,13 @@
 
         <TextView
             android:id="@+id/tvTitle"
-            android:includeFontPadding="false"
             style="@style/L116Bold"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
+            android:ellipsize="end"
+            android:includeFontPadding="false"
+            android:maxLines="1"
             android:textColor="@color/C171719"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@id/tvEndDate"
@@ -77,12 +80,13 @@
 
         <TextView
             android:id="@+id/tvContent"
-            android:includeFontPadding="false"
             style="@style/L414Medium"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:ellipsize="end"
+            android:includeFontPadding="false"
             android:maxLines="1"
+            android:layout_marginTop="4dp"
             android:textColor="@color/C4C4C4C"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@id/tvEndDate"
