--- a/app/src/main/res/layout/bottom_sheet_select_font.xml
+++ b/app/src/main/res/layout/bottom_sheet_select_font.xml
@@ -4,6 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginVertical="20dp"
+    android:paddingBottom="20dp"
     android:background="@drawable/shape_top_20_ffffff"
     android:paddingHorizontal="20dp">
 
@@ -23,10 +25,10 @@
         android:id="@+id/ivClose"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
         android:src="@drawable/ic_close"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintBottom_toBottomOf="@id/tvMomentTitle"
+        app:layout_constraintTop_toTopOf="@id/tvMomentTitle" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvAdapter"
