--- a/app/src/main/res/layout/fragment_moment_create.xml
+++ b/app/src/main/res/layout/fragment_moment_create.xml
@@ -17,7 +17,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:fillViewport="true"
-        app:layout_constraintBottom_toTopOf="@id/btnCreate"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@id/layoutToolBar">
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -231,6 +231,7 @@
                 android:background="@color/CFAFAFA"
                 android:paddingHorizontal="20dp"
                 android:paddingVertical="16dp"
+                android:id="@+id/layoutPrivate"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/tvMemoCount">
 
@@ -266,20 +267,21 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
             </androidx.constraintlayout.widget.ConstraintLayout>
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/btnCreate"
+                style="@style/L116Bold"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginHorizontal="20dp"
+                android:layout_marginBottom="40dp"
+                android:background="@drawable/selector_common_button"
+                android:enabled="false"
+                android:text="@string/moment_create_button"
+                android:layout_marginTop="36dp"
+                app:layout_goneMarginBottom="40dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:textColor="@color/selector_common_button_text"
+                app:layout_constraintTop_toBottomOf="@id/layoutPrivate"/>
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.core.widget.NestedScrollView>
-
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/btnCreate"
-        style="@style/L116Bold"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_marginHorizontal="20dp"
-        android:layout_marginBottom="40dp"
-        android:background="@drawable/selector_common_button"
-        android:enabled="false"
-        android:text="@string/moment_create_button"
-        android:textColor="@color/selector_common_button_text"
-        app:layout_constraintBottom_toBottomOf="parent" />
-
 </androidx.constraintlayout.widget.ConstraintLayout>
