--- a/app/src/main/res/layout/fragment_moment_detail.xml
+++ b/app/src/main/res/layout/fragment_moment_detail.xml
@@ -26,8 +26,12 @@
 
             <ImageView
                 android:id="@+id/ivImage"
-                android:layout_width="match_parent"
-                android:layout_height="300dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:maxHeight="300dp"
+                app:layout_constraintDimensionRatio="5:4"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
@@ -202,6 +206,7 @@
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btnPlusTrace"
         style="@style/L314Bold"
+        android:elevation="10dp"
         android:layout_width="wrap_content"
         android:layout_height="44dp"
         android:layout_marginBottom="40dp"
