--- a/app/src/main/res/layout/fragment_trace_create.xml
+++ b/app/src/main/res/layout/fragment_trace_create.xml
@@ -186,7 +186,6 @@
                 android:layout_marginHorizontal="20dp"
                 android:layout_marginTop="8dp"
                 android:orientation="vertical"
-                android:paddingBottom="120dp"
                 app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -194,19 +193,21 @@
                 app:spanCount="5"
                 tools:listitem="@layout/item_trace_background" />
 
+            <androidx.appcompat.widget.AppCompatButton
+                style="@style/L116Bold"
+                android:id="@+id/btnConfirm"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginHorizontal="20dp"
+                android:layout_marginBottom="40dp"
+                android:background="@drawable/selector_common_button"
+                android:enabled="false"
+                android:text="@string/confirm"
+                android:layout_marginTop="40dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:textColor="@color/selector_common_button_text"
+                app:layout_constraintTop_toBottomOf="@id/rvBackgroundColor" />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.core.widget.NestedScrollView>
-
-    <androidx.appcompat.widget.AppCompatButton
-        style="@style/L116Bold"
-        android:id="@+id/btnConfirm"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_marginHorizontal="20dp"
-        android:layout_marginBottom="50dp"
-        android:background="@drawable/selector_common_button"
-        android:enabled="false"
-        android:text="@string/confirm"
-        android:textColor="@color/selector_common_button_text"
-        app:layout_constraintBottom_toBottomOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
