--- a/app/src/main/res/layout/bottom_sheet_moment_edit.xml
+++ b/app/src/main/res/layout/bottom_sheet_moment_edit.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/shape_top_20_ffffff"
-    android:layout_marginVertical="20dp"
+    android:paddingTop="20dp"
     android:paddingBottom="20dp"
     android:paddingHorizontal="20dp">
 
