--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -50,15 +50,15 @@
             app:layout_constraintTop_toBottomOf="@id/ivEmpty" />
 
         <TextView
+            android:id="@+id/tvEmptyDescription"
             style="@style/L414Medium"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="6dp"
             android:text="@string/moment_empty_description"
             android:textAlignment="center"
             android:textColor="@color/C7F7F7F"
             app:layout_constraintEnd_toEndOf="parent"
-            android:id="@+id/tvEmptyDescription"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tvEmptyTitle" />
     </androidx.constraintlayout.widget.ConstraintLayout>
@@ -79,6 +79,7 @@
             android:clipToPadding="false"
             android:orientation="vertical"
             android:paddingHorizontal="50dp"
+            android:paddingTop="24dp"
             android:paddingBottom="40dp"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -91,6 +92,7 @@
             android:layout_height="0dp"
             android:layout_marginHorizontal="20dp"
             android:orientation="vertical"
+            android:paddingTop="24dp"
             android:paddingBottom="40dp"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintBottom_toBottomOf="parent"
