--- a/app/src/main/res/layout/fragment_moment_create.xml
+++ b/app/src/main/res/layout/fragment_moment_create.xml
@@ -22,6 +22,7 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
+            android:paddingBottom="40dp"
             android:layout_height="match_parent">
 
             <androidx.constraintlayout.widget.ConstraintLayout
@@ -232,7 +233,6 @@
                 android:paddingHorizontal="20dp"
                 android:paddingVertical="16dp"
                 android:id="@+id/layoutPrivate"
-                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/tvMemoCount">
 
                 <TextView
@@ -278,8 +278,6 @@
                 android:enabled="false"
                 android:text="@string/moment_create_button"
                 android:layout_marginTop="36dp"
-                app:layout_goneMarginBottom="40dp"
-                app:layout_constraintBottom_toBottomOf="parent"
                 android:textColor="@color/selector_common_button_text"
                 app:layout_constraintTop_toBottomOf="@id/layoutPrivate"/>
         </androidx.constraintlayout.widget.ConstraintLayout>
