--- a/app/src/main/res/layout/fragment_trace_create.xml
+++ b/app/src/main/res/layout/fragment_trace_create.xml
@@ -37,6 +37,7 @@
                 android:layout_height="wrap_content"
                 android:text="@string/trace_create_info"
                 android:textColor="@color/CFFFFFF"
+                android:drawablePadding="2dp"
                 app:drawableStartCompat="@drawable/ic_info"
                 app:layout_constraintBottom_toBottomOf="@id/view"
                 app:layout_constraintEnd_toEndOf="parent"
