--- a/app/src/main/res/layout/fragment_moment_detail.xml
+++ b/app/src/main/res/layout/fragment_moment_detail.xml
@@ -26,12 +26,12 @@
 
             <ImageView
                 android:id="@+id/ivImage"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:maxHeight="300dp"
                 app:layout_constraintDimensionRatio="5:4"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
@@ -45,6 +45,7 @@
                 android:paddingHorizontal="7dp"
                 android:paddingVertical="5dp"
                 android:textColor="@color/C874FFF"
+                android:visibility="gone"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/ivImage"
                 tools:text="D-7" />
@@ -131,11 +132,11 @@
                 <androidx.appcompat.widget.AppCompatButton
                     android:id="@+id/btnInvite"
                     style="@style/L910Bold"
-                    android:textColor="@color/C4C4C4C"
                     android:layout_width="wrap_content"
                     android:layout_height="29dp"
                     android:background="@drawable/shape_6_f6f6f6"
                     android:text="@string/moment_detail_invite"
+                    android:textColor="@color/C4C4C4C"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
@@ -176,19 +177,19 @@
                     style="@style/T320Bold"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/moment_detail_trace_count"
                     android:textColor="@color/C171719"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    app:layout_constraintTop_toTopOf="parent"
+                    tools:text="@string/moment_detail_trace_count" />
 
                 <androidx.appcompat.widget.AppCompatButton
                     android:id="@+id/btnTraceInvite"
                     style="@style/L910Bold"
-                    android:textColor="@color/C4C4C4C"
                     android:layout_width="wrap_content"
                     android:layout_height="29dp"
                     android:background="@drawable/shape_6_f6f6f6"
                     android:text="@string/moment_detail_invite"
+                    android:textColor="@color/C4C4C4C"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
@@ -197,8 +198,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
-                    android:paddingBottom="40dp"
                     android:orientation="vertical"
+                    android:paddingBottom="40dp"
                     app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                     app:layout_constraintTop_toBottomOf="@id/tvTraceCount"
                     tools:listitem="@layout/item_trace" />
@@ -209,12 +210,12 @@
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btnPlusTrace"
         style="@style/L314Bold"
-        android:elevation="10dp"
         android:layout_width="wrap_content"
         android:layout_height="44dp"
         android:layout_marginBottom="40dp"
         android:background="@drawable/shape_99_874fff"
         android:drawableStart="@drawable/ic_plus_white"
+        android:elevation="10dp"
         android:paddingHorizontal="31dp"
         android:text="@string/moment_detail_plus_trace"
         android:textColor="@color/CFFFFFF"
