--- a/app/src/main/res/layout/bottom_sheet_moment_cover.xml
+++ b/app/src/main/res/layout/bottom_sheet_moment_cover.xml
@@ -111,6 +111,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginTop="40dp"
+                android:paddingBottom="40dp"
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                 android:orientation="vertical"
                 app:layout_constraintTop_toBottomOf="@id/layoutCamera"
