--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -103,16 +103,17 @@
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btnCreate"
         style="@style/L314Bold"
+        android:elevation="10dp"
         android:layout_width="wrap_content"
         android:layout_height="44dp"
         android:layout_marginBottom="20dp"
-        android:background="@drawable/shape_99_874fff"
-        android:drawableStart="@drawable/ic_plus_white"
-        android:drawablePadding="2dp"
+        android:background="@drawable/shape_99_ffffff_171719"
+        android:drawableStart="@drawable/ic_plus"
+        android:drawablePadding="4dp"
         android:paddingHorizontal="23dp"
         android:paddingVertical="11dp"
         android:text="@string/moment_create_button"
-        android:textColor="@color/CFFFFFF"
+        android:textColor="@color/C171719"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
