[feature] 카카오 공유하기 기능 수정 및 API 및 디자인 이슈 수정

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -61,4 +61,5 @@
     <color name="CFFE4FA">#FFE4FA</color>
     <color name="CE3E1EF">#E3E1EF</color>
     <color name="CD8E2F3">#D8E2F3</color>
+    <color name="CFCECEC">#FCECEC</color>
 </resources>
