--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -34,6 +34,7 @@
                 android:layout_height="wrap_content"
                 app:helperText="@string/nickname"
                 app:hintText="@string/nickname_hint"
+                app:errorMessage="@string/nickname_error"
                 app:inputMaxLength="10"
                 app:layout_constraintTop_toTopOf="parent" />
 
