--- a/app/src/main/res/layout/item_trace.xml
+++ b/app/src/main/res/layout/item_trace.xml
@@ -31,6 +31,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
             android:drawablePadding="2dp"
+            style="@style/L512Bold"
             app:drawableStartCompat="@drawable/ic_thumb_up"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tvContent"
